2003-04-09  Frank Warmerdam  <warmerdam@pobox.com>

	* man/man1/{proj,cs2cs}.1: moved -m option from cs2cs.1 to
	proj.1 since it is only supported by proj.

	* nad/Makefile.am: added DESTDIR in three missing places as per
	bug report from Peter Galbraith - proj debian package manager.

2003-03-31  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.4.7 Release.

	* nad/esri: incorporated Paul Ramsey's update.  ESRI specific 
	coordinate systems in nad/esri.extra.

	* nad/epsg: Regenerated with towgs84 parameters properly generated
	for non-greenwich prime meridians. 

	http://bugzilla.remotesensing.org/show_bug.cgi?id=304

2003-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* config.guess, config.sub: updated from 
	ftp://ftp.gnu.org/pub/gnu/config/ in order to resolve Debian build
	problems on MIPS architecture. 
	
	http://bugs.debian.org/cgi-bin/bugreport.cgi?archive=no&bug=186586

	* src/pj_datums.c: fixed ire65 definition to refer to mod_airy, not
	modif_airy as per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=312

2003-03-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Added check that srcdefn->inv actually exists!

	Per http://mapserver.gis.umn.edu/bugs/show_bug.cgi?id=301

2003-03-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/cs2cs.c: modified so that -f formats are used for Z as well as
	x and y values.  
	As per http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=169056

	* src/man/man1/cs2cs.1: removed -V flag ... it is not supported.
	As per http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=162331

2003-03-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: changed NAD27 definition to make everything
	optional, and to include alaska, and ntv2_0.gsb. 
	
	nadgrids=@conus,@alaska,@ntv2_0.gsb,@ntv1_can.dat

	* src/pj_grid*, src/pj_apply_gridshift.c, src/nad_init.c: Lots of
	changes introducing the PJ_GRIDINFO structure, support for skippable
	grids ('@' prefix), delayed grid data loading and support for NTv2
	grids. 
